--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 python-telegram-bot==20.7
-pandas==2.0.3
+pandas==2.0.3; python_version >= '3.8'
 openpyxl==3.1.2
 requests==2.31.0
 schedule==1.2.0
